--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'poppins', sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     box-sizing: border-box;
 }
 .container{
@@ -12,11 +12,14 @@
 }
 .todo-app{
     width: 100%;
-    max-width: 540px;
+    max-width: 580px;
     background: #fff;
+    border-style: outset;
+    border-width: 5px;
+    border-color: #555;
     margin: 120px auto 20px;
-    padding: 40px 30px 40px;
-    border-radius: 20px;
+    padding: 40px 40px 40px;
+    border-radius: 30px;
 }
 .todo-app h2{
     color: rgb(40, 41, 46);
@@ -34,7 +37,7 @@
     align-items: center;
     justify-content: space-between;
     background: #edeef0;
-    border-radius: 30px;
+    border-radius: 50px;
     padding-left: 20px;
     margin-bottom: 25px;
 }
@@ -52,7 +55,7 @@ button{
     background: #3d4d70;
     color: #fff;
     font-size: 16px;
-    border-radius: 20px;
+    border-radius: 50px;
 }
 ul li{
     list-style: none;
